# PicoCalc

./: .gitmodules  README.md
Code/: README.md  shapones.patch
Code/FUZIX/: README.md  fuzix.patch  fuzix1.1.patch
Code/MP3Player/: .gitignore  CMakeLists.txt  README.md  config.h  i2ckbd.cpp  i2ckbd.h  icon_enter.h  icon_esc.h  icon_nav.h  icon_p.h  logo50.h  main_task.cpp  main_task.h  mp3_decoder_task.cpp  mp3_decoder_task.h  pico_mp3_player.cpp  sd_reader_task.cpp  sd_reader_task.h
Code/NES/: README.md
Code/PicoMite/: PicoMite.patch  README.md
Code/picocalc_helloworld/: CMakeLists.txt  README.md  main.c  sample.h
Code/picocalc_helloworld/i2ckbd/: i2ckbd.c
Code/picocalc_helloworld/lcdspi/: lcdspi.c
Code/picocalc_helloworld/pwm_sound/: CMakeLists.txt  pwm_sound.c  pwm_sound.h
Code/picocalc_kbd_tester/: CMakeLists.txt  README.md  keyboard_define.h  main.c
Code/picocalc_keyboard/: README.md  backlight.h  backlight.ino  battery.h  battery.ino  conf_app.h  fifo.h  fifo.ino  keyboard.h  keyboard.ino  picocalc_keyboard.ino  pins.h  port.h  port.ino  reg.h  reg.ino
Code/picocalc_lvgl_graphics_demo/: CMakeLists.txt  README.md  lv_conf.h  lv_port_indev_picocalc_kb.c  main.c
Code/picocalc_lvgl_graphics_demo/lib/lvgl/: CMakeLists.txt
Code/scripts/: partition_usb_32mb.sh
Code/uLisp/: README.md  uLisp.patch
wiki/: Home.md  How-to-Create-an-Official-PicoCalc-SD-Card.md  Setting-Up-Arduino-Development-for-PicoCalc-keyboard.md  Setting-Up-the-Pico-SDK-on-Linux-for-Pico-Development.md
